Fixed bug #38680 (Added missing handling of basic types in json_decode).

# already in HEAD